# fast-servicebus-emulator

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  PLAN.md  README.md  config-sample.yaml  config.yaml  docker-compose.yml  podman-pod.yaml  topology.yaml
.github/workflows/: docker-publish.yml
integration/: AzureServiceBusEmulator.Tests.slnx  Directory.Packages.props  FastServiceBusEmulator.slnx
integration/AspireSingleFileHost1/: apphost.run.json
integration/AzureServiceBusEmulator.AppHost/: AppHost.cs  AzureServiceBusEmulator.AppHost.csproj
integration/AzureServiceBusEmulator.IntegrationTests/: AdminApiTests.cs  AzureServiceBusEmulator.IntegrationTests.csproj  BackpressureTests.cs  BaseServiceBusTest.cs  CorrelationFilterTests.cs  DeadLetterTests.cs  EmulatorTests.cs  LinkCreditTests.cs  MessageTtlTests.cs  PeekLockTests.cs  ServiceBusProcessorTests.cs  SingleReceiverTests.cs
integration/FastServiceBusEmulator.Aspire.Hosting/: FastServiceBusEmulator.Aspire.Hosting.csproj  FastServiceBusEmulatorBuilderExtensions.cs  FastServiceBusEmulatorResource.cs  README.md  TestingClient.cs
integration/FastServiceBusEmulator.Aspire.Hosting.AppHost/: AppHost.cs  FastServiceBusEmulator.Aspire.Hosting.AppHost.csproj
integration/FastServiceBusEmulator.Aspire.Hosting.Tests/: AspireFactory.cs  FastServiceBusEmulator.Aspire.Hosting.Tests.csproj  IntegrationTest.cs
integration/FastServiceBusEmulator.Hosting/: FastServiceBusEmulator.Hosting.csproj  FastServiceBusEmulatorBuilderExtensions.cs  FastServiceBusEmulatorResource.cs
integration/FastServiceBusEmulator.IntegrationTests.AppHost/: AppHost.cs  FastServiceBusEmulator.IntegrationTests.AppHost.csproj
integration/FastServiceBusEmulatorTestProject/: Program.cs  (+3 more)
release/: nuget.sh
src/: admin.rs  cbs.rs  config.rs  lib.rs  main.rs  router.rs  sasl.rs  server.rs  store.rs
tests/: admin_test.rs  cbs_test.rs  queue_test.rs  router_unit_test.rs  store_unit_test.rs  stress_test.rs  topic_test.rs
(+20 files in other folders)
