[package]
name = "fast-servicebus-emulator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
fe2o3-amqp = { path = "vendor/fe2o3-amqp/fe2o3-amqp", features = ["acceptor"] }
fe2o3-amqp-types = { path = "vendor/fe2o3-amqp/fe2o3-amqp-types" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
fe2o3-amqp = { path = "vendor/fe2o3-amqp/fe2o3-amqp" }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
